# libcollections

./: .gitignore  Android.mk  INSTALL  LICENSE  Makefile.am  README.md  collections-static.pc.in  collections.pc.in  configure.ac  libcollections.def  libcollections.rc  libcollections.sln  libcollections.vcproj  resource.h
.github/: FUNDING.yml
examples/: Makefile.am  example-array.c  example-benchmark.c  example-binary-heap.c  example-bitset.c  example-dlist.c  example-flat-db.c  example-hash-map.c  example-hash-table.c  example-lc-string.c  example-lhash-table.c  example-rbtree.c  example-slist.c  example-tree-map.c  example-variant.c  example-vector.c
projects/android/: Android.mk  build.sh
projects/visual-studio/: libcollections.def  libcollections.rc  libcollections.vcproj
projects/xcode/libcollections.xcodeproj/: project.pbxproj
projects/xcode/libcollections.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
projects/xcode/libcollections.xcodeproj/project.xcworkspace/xcshareddata/: libcollections.xccheckout
projects/xcode/libcollections.xcodeproj/project.xcworkspace/xcuserdata/iMax-Joe.xcuserdatad/: UserInterfaceState.xcuserstate
projects/xcode/libcollections.xcodeproj/project.xcworkspace/xcuserdata/manvscode.xcuserdatad/: UserInterfaceState.xcuserstate
projects/xcode/libcollections.xcodeproj/xcuserdata/iMax-Joe.xcuserdatad/xcschemes/: libcollections-static-ios.xcscheme  libcollections-static.xcscheme  xcschememanagement.plist
projects/xcode/libcollections.xcodeproj/xcuserdata/joe.xcuserdatad/xcschemes/: libcollections-debug.xcscheme  libcollections-release.xcscheme  libcollections-static-ios-release.xcscheme  xcschememanagement.plist
projects/xcode/libcollections.xcodeproj/xcuserdata/manvscode.xcuserdatad/xcschemes/: libcollections.xcscheme  xcschememanagement.plist
src/: Makefile.am  alloc.h  array.c  array.h  bench-mark.c  bench-mark.h  benchmark-unix.c  benchmark-windows.c  benchmark.c  benchmark.h  bheap-template.h  bheap.c  bheap.h  binary-heap.h  bitset.c  bitset.h  buffer.c  buffer.h  dlist.c  dlist.h  dynarray.c  dynarray.h  flat-db.c  flat-db.h  hash-functions.c  hash-functions.h  hash-map.c  hash-map.h  hash-table.c  hash-table.h  heap.h  lc-string.c  lc-string.h  lhash-table.c  lhash-table.h  license.txt  macros.h  pool.h  rbtree.c  rbtree.h  (+14 more)
tests/: Makefile.am  test-array.c  test-bench-mark.c  test-bheap.c  test-binary-heap.c  test-bitset.c  test-dlist.c  test-dynarray.c  test-flat-db.c  test-hash-map.c  test-hash-table.c  test-lhash-table.c  test-pbheap.c  test-pvector.c  test-rbtree.c  test-slist.c  test-tree-map.c  test-tstring.c  test-variant.c  test-vector.c
