
# Add new files in alphabetical order. Thanks.
libcollections_src = array.c bench-mark.c bheap.c bitset.c dlist.c flat-db.c hash-functions.c hash-map.c hash-table.c lhash-table.c slist.c tree-map.c tstring.c rbtree.c variant.c vector.c 

library_includedir = $(includedir)/libcollections/
library_include_HEADERS = config.h array.h bench-mark.h bheap.h bitset.h dlist.h flat-db.h hash-functions.h hash-map.h hash-table.h lhash-table.h slist.h tree-map.h tstring.h rbtree.h variant.h vector.h 

# Library
lib_LTLIBRARIES = $(top_builddir)/lib/libcollections.la 
__top_builddir__lib_libcollections_la_SOURCES = $(libcollections_src)

