
# Add new files in alphabetical order. Thanks.
libcollections_src = \
array.c \
benchmark.c \
buffer.c \
bitset.c \
dlist.c \
flat-db.c \
hash-functions.c \
hash-map.c \
hash-table.c \
lhash-table.c \
rbtree.c \
slist.c \
tree-map.c \
lc-string.c \
variant.c \
vector.c

# Add new files in alphabetical order. Thanks.
libcollections_headers = \
alloc.h \
array.h \
benchmark.h \
buffer.h \
binary-heap.h \
bitset.h \
libcollections-config.h \
dlist.h \
hash-functions.h \
hash-map.h \
hash-table.h \
heap.h \
lhash-table.h \
macros.h \
pool.h \
rbtree.h \
slist.h \
tree-map.h \
lc-string.h \
variant.h \
vector.h

library_includedir      = $(includedir)/libcollections/
library_include_HEADERS = $(libcollections_headers)

# Library
lib_LTLIBRARIES                               = $(top_builddir)/lib/libcollections.la
__top_builddir__lib_libcollections_la_SOURCES = $(libcollections_src)

